Added two buttons and styled Info  component

--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,9 @@
       name="description"
       content="BusinessCard"
     />
-   
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    
-    <title>React App</title>
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link href="https://fonts.googleapis.com/css?family=Bungee+Inline" rel="stylesheet">
+  <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
